package com.huyphan.hahoot.quiz.present.model;

public interface Theme {

}
