package com.huyphan.hahoot.quiz.gameplay.model;

public interface Participant {

}
