package com.huyphan.hahoot.quiz.present.model;

public class Slide {

}
